--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build --base=/goit-js-hw-09/",
-    "preview": "vite preview",
+    "preview": "vite preview"
   },
   "devDependencies": {
     "gh-pages": "^6.3.0",
